# drift_watch

./: .gitignore  README.md  config.py  distribution_experiment.py  drift_detection.py  embedding_tracker.py  metrics.py  plot.py  pyproject.toml  requirements.txt  utils.py  vector_experiment.py
baseline-experiment/: baseline_experiment.py  dataloader.py
baseline-experiment/results/: analyze_drift_metrics.py  plot_drift_results.py  rolling_window.ipynb
batch_results/: batch_plot.py
tests/: stream_pca_kll_experiment.ipynb  test_kll_transform.py  test_kll_transform_ext.py
