[project]
name = "driftwatch"
version = "0.1.0"
description = "Your project description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "transformers",
  "datasets",
  "tqdm",
  "scikit-learn",
  "datasketches",
  "pytest"
]



[tool.ruff]
line-length = 88
target-version = "py39"
extend-select = ["I", "F", "E", "W", "C90", "N", "D", "UP", "B", "A"]
exclude = [".venv", ".mypy_cache", ".ruff_cache", "build", "dist"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
exclude = ["build", "dist", ".venv", ".mypy_cache"]
